--- a/board.css
+++ b/board.css
@@ -35,6 +35,42 @@
 	text-decoration: bold;
 
 }
+  .butt{
+    margin-top: 0;
+    margin-right: 0;
+    position: absolute;
+    right: 0;
+  }
+  .contain{
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    background: rgba(0,0,0,0.8);
+    position: fixed;
+    z-index: 1000;
+    top: 0; right: 0;
+    left: 0; bottom: 0;
+  }
+  .cont{
+    width: 80%;
+    height: 65%;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 20px;
+  }
+  .cont input, .cont button{
+    width: 80%;
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 5px;
+  }
 TABLE{
     margin-top: 20px;
     width: 100%;
@@ -236,9 +272,9 @@ h2{
     
 }
 .pic{
-	width: 99%;
-	height: 99%;
-	border-radius: 50%;
+	width: 19vw;
+	height: 19vw;
+	border-radius: 100%;
 }
 .hl{
     display: flex;
@@ -317,9 +353,9 @@ h2{
 	justify-content: center;
 }
 .jump{
-	width: 99%;
-	height: 99%;
-	border-radius: 50%;
+	width: 6.5vw;
+	height: 6.5vw;
+	border-radius: 100%;
 }
 h6{
 	margin: 0;
@@ -560,9 +596,9 @@ h2{
     
 }
 .pic{
-	width: 99%;
-	height: 99%;
-	border-radius: 50%;
+	width: 19vw;
+	height: 19vw;
+	border-radius: 100%;
 }
 .hl{
     display: flex;
@@ -631,6 +667,42 @@ h2{
     border-radius: 50%;
     border: none;
 }
+	  .butt{
+    margin-top: 0;
+    margin-right: 0;
+    position: absolute;
+    right: 0;
+  }
+  .contain{
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    background: rgba(0,0,0,0.8);
+    position: fixed;
+    z-index: 1000;
+    top: 0; right: 0;
+    left: 0; bottom: 0;
+  }
+  .cont{
+    width: 80%;
+    height: 65%;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 20px;
+  }
+  .cont input, .cont button{
+    width: 80%;
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 5px;
+  }
 .jiek{
 	width: 7vw;
 	height: 7vw;
@@ -643,9 +715,9 @@ h2{
 	justify-content: center;
 }
 .jump{
-	width: 99%;
-	height: 99%;
-	border-radius: 50%;
+	width: 6.5vw;
+	height: 6.5vw;
+	border-radius: 100%;
 }
 h6{
 	margin: 0;
