--- a/board.css
+++ b/board.css
@@ -230,11 +230,7 @@ h5{
 #page_3{
     width: 100vw;
     height: 100vh;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
+    display: grid;
     visibility: hidden;
 }
 #card_1{
@@ -242,7 +238,8 @@ h5{
     width: 40vw;
     border: 2px solid teal;
     margin: 20px;
-    float: left;
+    grid-row: 2/3;
+    grid-column: 2/5;
     border-radius: 30px;
     background:  rgb(255, 64, 0);
 }
@@ -252,7 +249,8 @@ h5{
     background: rgb(7, 194, 211);
     border: 2px solid teal;
     margin: 20px;
-    float: left;
+    grid-row: 4/6;
+    grid-column: 2/5;
     border-radius: 30px;
 }
 h2{
@@ -301,6 +299,7 @@ h2{
     width: 100vw;
     height: 100vh;
     text-align: center;
+    display: grid;
     visibility: hidden;
 }
 .bars{
