--- a/board.css
+++ b/board.css
@@ -303,19 +303,22 @@ h2{
     visibility: hidden;
 }
 .bars{
-	position: relative;
-	bottom: 0;
+    position: relative;
+    bottom: 0;
     width: 50vw;
     height: 70vh;
-    float: left; 
 }
 #team-1{
     background-color: rgba(255, 17, 5, 0.5);
     padding: 20px;
+	grid-row: 1/3;
+	grid-column: 1/4;
 }
 #team-2{
     background-color: rgba(6, 10, 253, 0.5);
     padding: 20px;
+	grid-row: 3/5;
+	grid-column: 1/4;
 }
 .nimo{
     margin: 0;
