--- a/board.css
+++ b/board.css
@@ -238,8 +238,8 @@ h5{
     width: 40vw;
     border: 2px solid teal;
     margin: 20px;
-    grid-row: 2/3;
-    grid-column: 2/5;
+    grid-row: 2/5;
+    grid-column: 2/3;
     border-radius: 30px;
     background:  rgb(255, 64, 0);
 }
@@ -249,9 +249,14 @@ h5{
     background: rgb(7, 194, 211);
     border: 2px solid teal;
     margin: 20px;
-    grid-row: 4/6;
-    grid-column: 2/5;
+    grid-row: 2/5;
+    grid-column: 4/5;
     border-radius: 30px;
+}
+.connn{
+	grid-row: 6/7;
+	grid-column: 1/5;
+	gap: 20px;
 }
 h2{
     background: rgb(145, 255, 11);
@@ -304,21 +309,19 @@ h2{
 }
 .bars{
     position: relative;
-    bottom: 0;
-    width: 50vw;
     height: 70vh;
 }
 #team-1{
     background-color: rgba(255, 17, 5, 0.5);
     padding: 20px;
 	grid-row: 1/3;
-	grid-column: 1/4;
+	grid-column: 1/3;
 }
 #team-2{
     background-color: rgba(6, 10, 253, 0.5);
     padding: 20px;
-	grid-row: 3/5;
-	grid-column: 1/4;
+	grid-row: 1/3;
+	grid-column: 3/5;
 }
 .nimo{
     margin: 0;
