--- a/board.css
+++ b/board.css
@@ -304,19 +304,20 @@ h2{
     height: 70vh;
 }
 #team-1{
-    background-color: rgba(255, 17, 5, 0.5);
+    background-color: rgb(255, 17, 5);
     padding: 20px;
 	grid-row: 1/3;
 	grid-column: 1/3;
 }
 #team-2{
-    background-color: rgba(6, 10, 253, 0.5);
+    background-color: rgb(6, 10, 253);
     padding: 20px;
 	grid-row: 1/3;
 	grid-column: 3/5;
 }
 #tym{
     font-size: 5vw;
+    width: 100%;
     background-color: gray;
     padding: 20px;
     color: whitesmoke;
