--- a/board.css
+++ b/board.css
@@ -148,7 +148,7 @@ h3{
     background-image: url(four.jpeg);
     background-color: rgba(255, 64, 0,0.5);
     background-blend-mode: overlay;
-    background-size: 100% 100%;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -156,7 +156,7 @@ h3{
 .clik2{
     height: 43vh;
     background: rgba(0, 234, 255,0.5) url(five.jpeg);
-    background-size: 100% 100%;
+    background-size: cover;
     background-blend-mode: overlay;
     display: flex;
     justify-content: center;
@@ -166,7 +166,7 @@ h3{
 	  height: 40vh;
      background: rgba(200, 204, 25,0.5) url(two.jpeg);
     background-blend-mode: overlay;
-    background-size: 100% 100%;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -230,6 +230,8 @@ h5{
     width: 40vw;
     border: 2px solid teal;
     margin: 20px;
+    display: grid;
+    place-content: center;
     grid-row: 2/5;
     grid-column: 1/3;
     border-radius: 30px;
@@ -241,6 +243,8 @@ h5{
     background: rgb(7, 194, 211);
     border: 2px solid teal;
     margin: 20px;
+    display: grid;
+    place-content: center;
     grid-row: 1/5;
     grid-column: 3/5;
     border-radius: 30px;
