--- a/board.css
+++ b/board.css
@@ -230,8 +230,10 @@ h5{
     width: 40vw;
     border: 2px solid teal;
     margin: 20px;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     grid-row: 2/5;
     grid-column: 1/3;
     border-radius: 30px;
@@ -243,8 +245,10 @@ h5{
     background: rgb(7, 194, 211);
     border: 2px solid teal;
     margin: 20px;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     grid-row: 1/5;
     grid-column: 3/5;
     border-radius: 30px;
