--- a/board.css
+++ b/board.css
@@ -183,7 +183,7 @@ h3{
     text-align: center;
 }
 input[type=text]{
-    width: 30vw;
+    width: 80%;
     margin: 5px;
     text-align: center;
     height: auto;
@@ -314,6 +314,11 @@ h2{
     text-align: center;
     display: grid;
     visibility: hidden;
+}
+.tabule{
+	position: absolute;
+	grid-row: 1/1;
+	grid-column: 1/5;
 }
 .bars{
     position: relative;
