--- a/board.css
+++ b/board.css
@@ -191,7 +191,7 @@ input[type=text]{
 }
 input[type=file]{
     position: relative;
-    width: 30vw;
+    width: 80%;
     height: 10vh;
     display: block;
     opacity: 0;
