--- a/board.css
+++ b/board.css
@@ -35,6 +35,21 @@
 	text-decoration: bold;
 
 }
+#link-holder{
+  display: grid;
+  place-content: center;
+  color: white;
+  width: 400px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: 50px;
+  border: 1px solid teal;
+  background: linear-gradient(45deg, rgba(0,0,0,0.7), rgba(0,0,0,0.2), rgba(0,0,0,0));
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-blend-mode: overlay;
+}
   .butt{
     margin-top: 0;
     margin-right: 0;
