--- a/ed.css
+++ b/ed.css
@@ -385,6 +385,7 @@ grid-column: 3/5;
 #tym{
   font-size: 5vw;
   width: 100%;
+  height: 30vh;
   background-color: yellowgreen;
   text-align: center;
   padding: 20px;
@@ -394,10 +395,11 @@ grid-column: 1/5;
 }
 .nimo{
   margin: 0;
-display: flex;
-height: 15vh;
+  display: flex;
+  height: 15vh;
   font-size: 4vw;
-  background: aliceblue;
+  color: white;
+  background: rgb(34,34,34);
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
   padding: 2vw;
