--- a/ed.css
+++ b/ed.css
@@ -27,6 +27,26 @@ overflow: auto;
   text-align: center;
 
 }
+.copy{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.5;
+  width: 150px;
+  font-size: 1.5rem;
+}
+.copy a{
+  text-decoration: none;
+  width: 130px;
+  height: 40px;
+  padding: 5px;
+}
+.copy:hover a{
+  background: rgba(0,0,0,0.5);
+  color: white;
+}
 .lop{
 width: 70vw;
   padding: 20px;
