--- a/Ndejje Sports/screen.css
+++ b/Ndejje Sports/screen.css
@@ -53,3 +53,8 @@
   margin: 10px;
   border-radius: 20px;
 }
+.del-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
