--- a/Ndejje Sports/styles.css
+++ b/Ndejje Sports/styles.css
@@ -57,6 +57,17 @@ body {
     overflow-x: hidden;
     position: relative;
 }
+.site-footer {
+  text-align: center;
+  padding: 15px;
+  background-color: var(--dark-gray);
+  color: #fff;
+  font-size: 14px;
+}
+
+.site-footer p {
+  margin: 0;
+}
 .signup-img, .banner{
   width: 100%;
   height: 40%;
