--- a/Ndejje Sports/styles.css
+++ b/Ndejje Sports/styles.css
@@ -57,6 +57,22 @@ body {
     overflow-x: hidden;
     position: relative;
 }
+@media (min-width: 1024px) {
+
+  video {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100vw;
+    height: 100vh;
+
+    object-fit: cover;
+
+    z-index: -1;
+  }
+
+}
 .site-footer {
   text-align: center;
   padding: 15px;
